# PolyVault

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.optimized  LICENSE  MEMORY.md  README.md  docker-compose.lb.yml  docker-compose.yml  flutter_cross_platform_test_report.md  flutter_integration_test_report.md  security_code_review_report.md  uat_report_2026-03-23.md
.github/workflows/: ci-cd.yml  ci.yml
config/: config.yaml
config/monitoring/: alertmanager.yml  docker-compose.yml  prometheus.yml
config/monitoring/alerts/: polyvault_alerts.yml
config/monitoring/grafana/dashboards/: polyvault_dashboard.json
config/nginx/: nginx-cluster.conf  nginx.conf
config/nginx/conf.d/: cluster.conf  polyvault.conf
deploy/: docker-compose.lb.yml
docs/: AGENT_DEVELOPMENT_GUIDE.md  API.md  API_EXAMPLES.md  API_REFERENCE.md  ARCHITECTURE.md  BROWSER_EXTENSION_GUIDE.md  CHANGELOG.md  COMPREHENSIVE_TEST_REPORT.md  CONTRIBUTING.md  CORE_API_TEST_REPORT_2026-03-24.md  DEPLOYMENT.md  DEPLOYMENT_OPERATIONS.md  DEVELOPMENT_GUIDE.md  DEVELOPMENT_SETUP.md  DEVICE_MANAGEMENT.md  DOCUMENT_REVIEW_REPORT.md  ECAL_API.md  ECAL_DESIGN.md  ECAL_PERFORMANCE_TEST_REPORT_2026-03-24.md  ECAL_SETUP.md  FAQ.md  FFI_BINDING_GUIDE.md  FLUTTER_INTEGRATION_GUIDE.md  ISSUE_TRACKER.md  LICENSE.md  LOAD_BALANCE_CONFIG.md  MONITORING_CONFIG.md  PERFORMANCE_TUNING.md  PLUGIN_ARCHITECTURE.md  PLUGIN_DEVELOPMENT_GUIDE.md  POLYVAULT_COMPREHENSIVE_TEST_REPORT.md  PROTOCOL.md  QUICKSTART.md  README.md  README_DOCS_RULES.md  RELEASE_NOTES.md  SECURITY_FIX_REPORT.md  SETTINGS_UI.md  TECHNICAL_SPECIFICATION.md  TESTING.md  (+30 more)
docs/team/: devops-understanding.md  frontend-understanding.md
docs/test_report/: ecal_unit_test_report.md
protos/: openclaw.proto
scripts/: deploy-lb.sh  deploy.sh  scale.py
src/: API_DOCUMENTATION.md  PASSWORD_STRENGTH_README.md  data_bus.cpp  data_bus_test.cpp  ipc_test.cpp  key-management-api.js  key-management-config.json  key-management-specs.md  key-management-system.js  key-management-tests.js  password-strength-api.js  password-strength-tests.js  password-strength.js  polyvault_functional_test_report.md  polyvault_messages.proto  protobuf_serializer.h  security-audit-api.js  security-audit.js  security-module.js  security-monitor.js  signature-api.js  signature-verification-docs.md  signature-verification-tests.js  signature-verification.js
src/agent/: CMakeLists.txt  vcpkg.json
src/agent/include/: agent.hpp  audit_logger.hpp  credential_service.hpp  crypto_utils.hpp  data_bus.hpp  data_sync.hpp  ecal_communication.hpp  encryption_layer.hpp  key_manager.hpp  message_handler.hpp  node_discovery.hpp  openclaw_client.hpp  p2p_communication.hpp  perf_monitor.hpp  permission_manager.hpp  plugin_interface.hpp  rest_server.hpp  signature.hpp  simple_agent.hpp  simple_message.hpp  zk_vault.hpp
src/agent/include/google/protobuf/: arena.h  generated_message_bases.h  generated_message_table_driven.h  message.h  port.h  runtime_version.h
src/agent/include/google/protobuf/io/: coded_stream.h
src/agent/include/monitoring/: ecal_monitor.hpp
src/agent/protos/: openclaw.proto
src/agent/src/: agent.cpp  audit_logger.cpp  credential_service.cpp  crypto_utils.cpp  data_bus.cpp  data_sync.cpp  key_manager.cpp  main.cpp  openclaw_client.cpp  p2p_communication.cpp  perf_benchmark.cpp  perf_monitor.cpp  permission_manager.cpp  plugin_manager.cpp  rest_server.cpp  secure_credential_store.cpp  signature.cpp  simple_agent.cpp  simple_main.cpp  test_crypto_utils.cpp  test_data_bus.cpp  test_ecal_communication.cpp  test_ecal_integration.cpp  zk_vault.cpp
src/client/: pubspec.yaml  test_report.md
src/client/android/app/: build.gradle
src/client/docs/: ECAL_USAGE.md
src/client/ios/Runner/: Info.plist  Runner.entitlements
src/client/lib/: main.dart
src/client/lib/models/: credential.dart  device.dart  message.dart  models.dart  storage.dart  sync_item.dart
src/client/lib/providers/: auth_provider.dart  ecal_provider.dart  providers.dart  theme_provider.dart
src/client/lib/screens/: about_screen.dart  authorization_flow_screen.dart  auto_authorization_screen.dart  backup_screen.dart  chat_screen.dart  connection_test_screen.dart  contacts_screen.dart  create_post_responsive.dart  credential_detail_screen.dart  credential_request_screen.dart  credentials_screen.dart  device_management_screens.dart  device_pairing_screen.dart  devices_screen.dart  devices_screen_enhanced.dart  file_transfer_screen.dart  home_responsive.dart  home_screen.dart  main_layout.dart  message_detail_screen.dart  message_encryption_screen.dart  messages_screen.dart  notification_center_screen.dart  sync_screen.dart  (+8 more)
src/client/test/: credentials_screen_test.dart  custom_widgets_test.dart  devices_screen_test.dart  function_test.dart  integration_test.dart  messages_test.dart  models_test.dart  performance_test.dart  responsive_layout_test.dart  run_tests.ps1  widget_test.dart
src/plugins/include/: filter_plugin.hpp  merger_plugin.hpp  transformer_plugin.hpp
src/plugins/src/: filter_plugin.cpp  plugins_impl.cpp  transformer_plugin.cpp
tests/: conftest.py  ecal_test_results.txt  pytest.ini  security_test_report.md  stability_test_report.md  test_automation.py  test_backup.py  test_core_api.py  test_credentials.py  test_crypto_utils.cpp  test_device_management.py  test_devices.py  test_e2e.py  test_ecal_performance.py  test_functional.py  test_integration.py  test_messages.py  test_notifications.py  test_password_generator.py  test_performance.dart  test_performance_stress.py  test_protobuf_serialization.cpp  test_security.py  test_security_module.dart  test_security_module.js  test_security_regression.py  test_security_validation.py  test_settings.py  test_smoke.py  test_stability.py  test_sync.py
tests/performance/: test_performance_baseline.py  test_performance_comprehensive.py
(+55 files in other folders)
